--- a/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/application-status/application-status.component.html
+++ b/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/application-status/application-status.component.html
@@ -1,6 +1,6 @@
-<div class="table-container">
+<div class="mx-4 table-container">
     <table class="table table-bordered table-striped">
-      <thead class="thead-dark">
+      <thead >
         <tr>
           <th>Application No.</th>
           <th>Applicant Name</th>
