--- a/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/application-status/application-status.component.css
+++ b/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/application-status/application-status.component.css
@@ -1,59 +1,63 @@
-.table-container {
-    margin: 30px;
-    margin-bottom: 450px;
-  }
-  .table th, .table td {
-    vertical-align: middle;
-    text-align: center;
-  }
-  .btn-view {
-    width: 80px;
-  }
-  .status-new {
-    background-color: lightblue;
-    color: blue;
-  }
-  
-  .status-pending {
-    background-color: lightyellow;
-    color: orange;
-  }
-  
-  .status-approved {
-    background-color: lightgreen;
-    color: green;
-  }
-  
-  .status-rejected {
-    background-color: lightcoral;
-    color: red;
-  }
-  
-  .payment-unpaid {
-    background-color: lightpink;
-    color: darkred;
-  }
-  
-  .payment-paid {
-    background-color: lightgray;
-    color: darkgreen;
-  }
 
-  .table-container .table td button {
-    background-color: #28a745; /* Bootstrap's success color */
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .table-container .table td button:hover {
-    background-color: #218838; /* Darker shade of the success color */
-  }
-  
-  .table-container .table td button:focus {
-    outline: none;
-    box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5); /* Focus outline */
-  }
-  
+:root {
+  --color-primary: #4a154b;
+  --color-secondary: #df6404;
+  --color-background: #ffe1cc;
+  --color-support1: #faf2f2;
+}
+th,
+th button.btn-sort {
+  background-color:#4a154b;
+  color: white;
+  text-align: center;
+  align-items: baseline;
+}
+
+h2 {
+  color: var(--color-secondary);
+}
+.btn-review {
+  background-color: var(--color-secondary);
+  color: white;
+}
+
+.btn-review:hover {
+  background-color: white;
+  border-width: 1px;
+  border-color: var(--color-secondary);
+  color: var(--color-secondary);
+
+  scale: 1;
+}
+.table {
+  text-align: center;
+}
+
+.btn-nxt {
+  background-color: var(--color-secondary);
+  border-color: var(--color-secondary);
+  color: white;
+}
+
+.btn-nxt:hover,
+.btn-pageno {
+  background-color: white;
+  border-color: var(--color-secondary);
+  color: var(--color-secondary);
+}
+
+.btn-nxt:disabled {
+  background-color: white;
+  border-color: var(--color-secondary);
+  color: var(--color-secondary);
+  opacity: 0.6;
+}
+.btn-nxtpage {
+  border-color: var(--color-primary);
+  color: var(--color-primary);
+}
+.btn-nxtpage:hover {
+  background-color: var(--color-primary);
+  border-color: var(--color-primary);
+  color: white;
+}
