--- a/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/user-navbar/user-navbar.component.html
+++ b/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/user-navbar/user-navbar.component.html
@@ -18,7 +18,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item me-2">
           <a
-            class="nav-link active"
+            class="nav-link active active"
             aria-current="page"
             routerLink="/user-home"
           >
@@ -26,32 +26,32 @@
           </a>
         </li>
         <li class="nav-item me-2">
-          <a class="nav-link" routerLink="/user-home/new-passport">
+          <a class="nav-link active" routerLink="/user-home/new-passport">
             <i class="fas fa-edit"></i> New Passport
           </a>
         </li>
         <li class="nav-item me-2">
-          <a class="nav-link" routerLink="/user-home/renewal-passport">
+          <a class="nav-link active" routerLink="/user-home/renewal-passport">
             <i class="fas fa-redo-alt"></i> Renew Passport
           </a>
         </li>
         <li class="nav-item me-2">
-          <a class="nav-link" routerLink="/user-home/history">
+          <a class="nav-link active" routerLink="/user-home/history">
             <i class="fas fa-history"></i> History
           </a>
         </li>
         <li class="nav-item me-2">
-          <a class="nav-link" routerLink="/user-home/feedback">
+          <a class="nav-link active" routerLink="/user-home/feedback">
             <i class="fas fa-comments"></i> Feedback
           </a>
         </li>
         <li class="nav-item me-2">
-          <a class="nav-link" routerLink="/user-home/payment">
+          <a class="nav-link active" routerLink="/user-home/payment">
             <i class="fas fas fa-receipt"></i> Payment
           </a>
         </li>
         <li class="nav-item me-2">
-          <a class="nav-link" routerLink="/user-home/faq">
+          <a class="nav-link active" routerLink="/user-home/faq">
             <i class="fas fa-question-circle"></i> FAQ
           </a>
         </li>
