--- a/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/shared/header/header.component.html
+++ b/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/shared/header/header.component.html
@@ -33,8 +33,8 @@
                                 <img src="../../../../assets/svg/user.svg" class="nav-logo" > {{currentUser?.firstname}}
                             </a>
                             <div class="dropdown-menu" aria-labelledby="profileDropdown">
-                                <a class="dropdown-item" routerLink="user">Settings</a>
-                                <a class="dropdown-item" routerLink="user/notifications">Notifications</a>
+                                <a class="dropdown-item" routerLink="profile">Settings</a>
+                                <a class="dropdown-item" routerLink="profile/notifications">Notifications</a>
                                 <a class="dropdown-item"(click)="logout()" style="color: red;">Logout</a>
                                 <a class="dropdown-item" routerLink="./">Back</a>
                             </div>
