--- a/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/user-home/user-home.component.html
+++ b/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/user-home/user-home.component.html
@@ -42,7 +42,7 @@
             <h5><i class="fas fa-file-alt"></i> Apply for New Passport</h5>
             <p>Submit your application for a new passport.</p>
             <a
-              routerLink="/user-home/new_pass"
+              routerLink="/user-home/new-passport"
               class="btn btn-primary w-75 mt-3"
               ><i class="fas fa-clipboard-check me-2"></i> Apply</a
             >
@@ -60,7 +60,7 @@
             <h5><i class="fas fa-file-alt"></i> Renew Passport</h5>
             <p>Renew your existing passport.</p>
             <a
-              routerLink="/user-home/renewal_passport"
+              routerLink="/user-home/renewal-passport"
               class="btn btn-primary w-75 mt-3"
               ><i class="fas fa-clipboard-check me-2"></i> Renew</a
             >
