--- a/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/user-navbar/user-navbar.component.html
+++ b/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/user-navbar/user-navbar.component.html
@@ -26,12 +26,12 @@
           </a>
         </li>
         <li class="nav-item me-2">
-          <a class="nav-link active" routerLink="/user-home/new-passport">
+          <a class="nav-link active" routerLink="/application-form/section/1">
             <i class="fas fa-edit"></i> New Passport
           </a>
         </li>
         <li class="nav-item me-2">
-          <a class="nav-link active" routerLink="/user-home/renewal-passport">
+          <a class="nav-link active" routerLink="/application-form/renewal-section/1">
             <i class="fas fa-redo-alt"></i> Renew Passport
           </a>
         </li>
@@ -69,7 +69,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            <i class="fas fa-user-circle me-1"></i> {{username}}
+            <i class="fas fa-user-circle me-"></i> {{username}}
           </a>
           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
             <a class="dropdown-item" routerLink="/profile">Profile</a>
