--- a/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/user-info/user-info.component.html
+++ b/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/user-module/user-info/user-info.component.html
@@ -1,7 +1,8 @@
-<div class="container mt-4">
-    <div class="row col-md-4 ">
+<app-user-navbar class="mb-5"></app-user-navbar>
+<div class="container mt-5">
+    <div class="row col-md-4 mt-5">
       <div class="col">
-        <div class="card profile-card">
+        <div class="card profile-card mt-5">
           <div class="profile-header">
           
             <div>
