--- a/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/admin/admin.component.html
+++ b/PassportApplication/PassportApplication/frontend/passport_app/src/app/modules/admin/admin.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
-  <div class="card">
-    <div class="card-header bg-danger text-white">
-      <h2 class="card-title">Admin Dashboard</h2>
+
+    <div class="card-header">
+      <h2 class="card-title c1">Admin Dashboard</h2>
     </div>
     <div class="card-body">
       <div class="d-flex justify-content-end mb-4">
@@ -571,5 +571,5 @@
         ></app-pagination>
       </div>
     </div>
-  </div>
+
 </div>
